--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "sinon": "^10.0.0"
   },
   "repository": {
     "type": "git",
